2008-05-01  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-actions.h:
	* src/file-manager/fm-directory-view.c
	(action_open_new_tab_callback), (open_one_in_new_tab),
	(real_update_menus):
	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/nautilus-desktop-window.c
	(nautilus_desktop_window_class_init):
	* src/nautilus-navigation-window.c (real_open_slot):
	* src/nautilus-window-manage-views.c (handle_go_back),
	(handle_go_forward), (handle_go_elsewhere), (update_history),
	(update_for_new_location):
	* src/nautilus-window-private.h:
	* src/nautilus-window-slot.c
	(nautilus_window_slot_add_current_location_to_history_list):
	* src/nautilus-window-slot.h:
	* src/nautilus-window.c (nautilus_add_bookmark_to_history_list),
	(nautilus_add_to_history_list_no_notify),
	(nautilus_forget_history), (nautilus_window_class_init):
	* src/nautilus-window.h:
	Add "Open in New Tab" item. Move bookmark history handling code from
	windows to slots.

2008-05-01  Christian Neumair  <cneumair@gnome.org>

	* src/Makefile.am:
	* src/ephy-spinner.c (ephy_spinner_get_spinning):
	* src/ephy-spinner.h:
	* src/nautilus-navigation-window-menus.c (action_new_tab_callback):
	* src/nautilus-navigation-window-slot.c
	(nautilus_navigation_window_slot_class_init):
	* src/nautilus-navigation-window.c (notebook_tab_close_requested),
	(nautilus_navigation_window_init), (real_sync_title),
	(real_sync_allow_stop), (real_open_slot),
	(nautilus_navigation_window_class_init):
	* src/nautilus-notebook.c (nautilus_notebook_set_dnd_enabled),
	(nautilus_notebook_get_property), (nautilus_notebook_set_property),
	(nautilus_notebook_class_init), (find_notebook_at_pointer),
	(is_in_notebook_window), (find_tab_num_at_pos), (button_press_cb),
	(notebook_drag_data_received_cb), (nautilus_notebook_init),
	(nautilus_notebook_sync_loading),
	(nautilus_notebook_sync_tab_label), (close_button_clicked_cb),
	(tab_label_style_set_cb), (build_tab_label),